fix scrollbar appearing on project page welcome screen

--- a/resources/web/model/model.css
+++ b/resources/web/model/model.css
@@ -14,7 +14,7 @@ html
 
 body
 {
-	min-width: 1280px;
+	/* min-width: 1280px; ORCA fixes scrollbar appear on welcome screen */
 	height: 100%;
 	display:flex;
 	flex-direction: column;
@@ -28,7 +28,7 @@ body
 
 #EmptyArea
 {
-	min-width: 1280px;
+	/* min-width: 1280px; ORCA fixes scrollbar appear on welcome screen */
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -39,6 +39,7 @@ body
 
 #WholeArea
 {
+	min-width: 1280px; /* ORCA fix scrollbar appears on welcome screen */
 	height:  100%;
 	position: relative;
 	overflow-y: hidden;
